Fix collapse content in different writing modes

--- a/src/theme/components/collapse.scss
+++ b/src/theme/components/collapse.scss
@@ -29,7 +29,7 @@
 
 .collapse_content {
 	position: absolute;
-	width: calc(100% - var(--overflow-safe-area) * 2);
+	inline-size: calc(100% - var(--overflow-safe-area) * 2);
 	top: 0;
 	left: 0;
 
